completely drop the pre-PEP8 methods in pyparsing 4.0, though we won't see that release
until some time in 2025. So there is plenty of time to convert existing parsers to
the new function names before the old functions are completely removed. (Big help from
Devin J. Pohly in structuring the code to enable this peaceful transition.)


Version 3.2.0 - in development
------------------------------
- Discontinued support for Python 3.6, 3.7, and 3.8.

- Added `lox_parser.py` example, a parser for the Lox language used as a tutorial in
  Robert Nystrom's "Crafting Interpreters" (http://craftinginterpreters.com/)

- Added `complex_chemical_formulas.py` example, to add parsing capability for
  formulas such as "3(C₆H₅OH)₂".

- Added query syntax to `mongodb_query_expression.py` with better support for
  array fields ("contains", "contains all", "contains any", and "contains none");
  and "like" operator to support SQL "%" wildcard matching and "~=" operator to
  support regex matching.


Version 3.1.4 - August, 2024
----------------------------
- Fixed a regression introduced in pyparsing 3.1.3, addition of a type annotation that
  referenced `re.Pattern`. Since this type was introduced in Python 3.7, using this type
  definition broke Python 3.6 installs of pyparsing 3.1.3. PR submitted by Felix Fontein,
  nice work!


Version 3.1.3 - August, 2024
----------------------------
- Added new `Tag` ParserElement, for inserting metadata into the parsed results.
  This allows a parser to add metadata or annotations to the parsed tokens.
  The `Tag` element also accepts an optional `value` parameter, defaulting to `True`.
  See the new `tag_metadata.py` example in the `examples` directory.

  Example:

        # add tag indicating mood
        end_punc = "." | ("!" + Tag("enthusiastic")))
        greeting = "Hello" + Word(alphas) + end_punc

        result = greeting.parse_string("Hello World.")
        print(result.dump())

        result = greeting.parse_string("Hello World!")