@@ -14,7 +14,8 @@ Devin J. Pohly in structuring the code to enable this peaceful transition.)
 
 Version 3.2.0 - in development
 ------------------------------
-- Discontinued support for Python 3.6, 3.7, and 3.8.
+- Discontinued support for Python 3.6, 3.7, and 3.8. Reworked portions of the
+  packrat cache to utilize insertion-preserving ordering in dicts.
 
 - Added `lox_parser.py` example, a parser for the Lox language used as a tutorial in
   Robert Nystrom's "Crafting Interpreters" (http://craftinginterpreters.com/)
